@@ -23,13 +23,14 @@ package soot.xml;
  */
 
 import java.io.PrintWriter;
+import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Date;
 import java.util.Iterator;
 import java.util.List;
+import java.util.ListIterator;
 import java.util.Map;
 import java.util.StringTokenizer;
-import java.util.Vector;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -47,9 +48,10 @@ import soot.SootClass;
 import soot.SootField;
 import soot.SootMethod;
 import soot.Trap;
+import soot.Type;
 import soot.Unit;
 import soot.ValueBox;
-import soot.toolkits.graph.ExceptionalUnitGraph;
+import soot.toolkits.graph.ExceptionalUnitGraphFactory;
 import soot.toolkits.scalar.LiveLocals;
 import soot.toolkits.scalar.SimpleLiveLocals;
 import soot.util.Chain;
@@ -57,6 +59,7 @@ import soot.util.Chain;
 /** XML printing routines all XML output comes through here */
 public class XMLPrinter {
   private static final Logger logger = LoggerFactory.getLogger(XMLPrinter.class);
+
   // xml and dtd header
   public static final String xmlHeader = "<?xml version=\"1.0\" ?>\n";
   public static final String dtdHeader = "<!DOCTYPE jil SYSTEM \"http://www.sable.mcgill.ca/~flynn/jil/jil10.dtd\">\n";
@@ -64,7 +67,15 @@ public class XMLPrinter {
   // xml tree
   public XMLRoot root;
 
+  public XMLPrinter(Singletons.Global g) {
+  }
+
+  public static XMLPrinter v() {
+    return G.v().soot_xml_XMLPrinter();
+  }
+
   // returns the buffer - this is the XML output
+  @Override
   public String toString() {
     if (root != null) {
       return root.toString();
@@ -94,50 +105,115 @@ public class XMLPrinter {
     return root.addElement(name, value, attributes, values);
   }
 
-  public XMLPrinter(Singletons.Global g) {
+  /**
+   * Prints out an XML representation of the given SootClass with each method Body printed in the textual format
+   * corresponding to the IR used to encode the Body.
+   *
+   * @param cl
+   * @param out
+   *          a PrintWriter instance to print to.
+   */
+  public void printJimpleStyleTo(SootClass cl, PrintWriter out) {
+    this.root = new XMLRoot();
+
+    final Scene sc = Scene.v();
+    final XMLNode xmlClassNode;
+
+    // Print XML class output
+    {
+      // add header nodes
+      XMLNode xmlRootNode = root.addElement("jil");
+
+      // add history node
+      // TODO: grab the software version and command line
+      StringBuilder cmdlineStr = new StringBuilder();
+      for (String element : Main.v().cmdLineArgs) {
+        cmdlineStr.append(element).append(' ');
+      }
+      String dateStr = new Date().toString();
+      XMLNode xmlHistoryNode = xmlRootNode.addChild("history");
+      xmlHistoryNode.addAttribute("created", dateStr);
+      xmlHistoryNode.addChild("soot", new String[] { "version", "command", "timestamp" },
+          new String[] { Main.versionString, cmdlineStr.toString().trim(), dateStr });
+
+      // add class root node
+      xmlClassNode = xmlRootNode.addChild("class", new String[] { "name" }, new String[] { sc.quotedNameOf(cl.getName()) });
+      if (!cl.getPackageName().isEmpty()) {
+        xmlClassNode.addAttribute("package", cl.getPackageName());
+      }
+      if (cl.hasSuperclass()) {
+        xmlClassNode.addAttribute("extends", sc.quotedNameOf(cl.getSuperclass().getName()));
+      }
+
+      // add modifiers subnode
+      XMLNode xmlTempNode = xmlClassNode.addChild("modifiers");
+      for (StringTokenizer st = new StringTokenizer(Modifier.toString(cl.getModifiers())); st.hasMoreTokens();) {
+        xmlTempNode.addChild("modifier", new String[] { "name" }, new String[] { st.nextToken() });
+      }
+      xmlTempNode.addAttribute("count", String.valueOf(xmlTempNode.getNumberOfChildren()));
+    }
+
+    // Print interfaces
+    {
+      XMLNode xmlTempNode = xmlClassNode.addChild("interfaces", "", new String[] { "count" },
+          new String[] { String.valueOf(cl.getInterfaceCount()) });
+      for (SootClass next : cl.getInterfaces()) {
+        xmlTempNode.addChild("implements", "", new String[] { "class" }, new String[] { sc.quotedNameOf(next.getName()) });
+      }
+    }
+
+    // Print fields
+    {
+      XMLNode xmlTempNode =
+          xmlClassNode.addChild("fields", "", new String[] { "count" }, new String[] { String.valueOf(cl.getFieldCount()) });
+
+      int i = 0;
+      for (SootField f : cl.getFields()) {
+        if (!f.isPhantom()) {
+          // add the field node
+          XMLNode xmlFieldNode = xmlTempNode.addChild("field", "", new String[] { "id", "name", "type" },
+              new String[] { String.valueOf(i++), f.getName(), f.getType().toString() });
+
+          XMLNode xmlModifiersNode = xmlFieldNode.addChild("modifiers");
+          for (StringTokenizer st = new StringTokenizer(Modifier.toString(f.getModifiers())); st.hasMoreTokens();) {
+            xmlModifiersNode.addChild("modifier", new String[] { "name" }, new String[] { st.nextToken() });
+          }
+          xmlModifiersNode.addAttribute("count", String.valueOf(xmlModifiersNode.getNumberOfChildren()));
+        }
+      }
+    }
+
+    // Print methods
+    {
+      XMLNode methodsNode =
+          xmlClassNode.addChild("methods", new String[] { "count" }, new String[] { String.valueOf(cl.getMethodCount()) });
+
+      for (Iterator<SootMethod> methodIt = cl.methodIterator(); methodIt.hasNext();) {
+        SootMethod method = methodIt.next();
+        if (!method.isPhantom()) {
+          if (!Modifier.isAbstract(method.getModifiers()) && !Modifier.isNative(method.getModifiers())) {
+            if (!method.hasActiveBody()) {
+              throw new RuntimeException("method " + method.getName() + " has no active body!");
+            } else {
+              Body body = method.getActiveBody();
+              body.validate();
+              printStatementsInBody(body, methodsNode);
+            }
+          }
+        }
+      }
+    }
+
+    out.println(toString());
   }
 
-  public static XMLPrinter v() {
-    return G.v().soot_xml_XMLPrinter();
-  }
-
-  private XMLNode xmlNode = null;
-
-  public XMLNode setXMLNode(XMLNode node) {
-    return (this.xmlNode = node);
-  }
-
-  /** Prints the given <code>JimpleBody</code> to the specified <code>PrintWriter</code>. */
-  private void printStatementsInBody(Body body, java.io.PrintWriter out) {
-    LabeledUnitPrinter up = new NormalUnitPrinter(body);
-    Map<Unit, String> stmtToName = up.labels();
-
-    Chain<Unit> units = body.getUnits();
-
-    // UnitGraph unitGraph = new soot.toolkits.graph.BriefUnitGraph( body );
-    ExceptionalUnitGraph exceptionalUnitGraph = new soot.toolkits.graph.ExceptionalUnitGraph(body);
-
-    // include any analysis which will be used in the xml output
-    LiveLocals sll = new SimpleLiveLocals(exceptionalUnitGraph);
-
-    // iterate through each statement
-    String cleanMethodName = cleanMethod(body.getMethod().getName());
-    Iterator<Unit> unitIt = units.iterator();
-    Unit currentStmt = null;
+  private void printStatementsInBody(Body body, XMLNode methodsNode) {
+    final LabeledUnitPrinter up = new NormalUnitPrinter(body);
+    final Map<Unit, String> stmtToName = up.labels();
+    final Chain<Unit> units = body.getUnits();
 
     String currentLabel = "default";
-    long statementCount = 0;
     long labelCount = 0;
-    long labelID = 0;
-
-    // lists
-    Vector<String> useList = new Vector<String>();
-    Vector<Vector<Long>> useDataList = new Vector<Vector<Long>>();
-    Vector<String> defList = new Vector<String>();
-    Vector<Vector<Long>> defDataList = new Vector<Vector<Long>>();
-    Vector<Vector<String>> paramData = new Vector<Vector<String>>();
-    Vector<XMLLabel> xmlLabelsList = new Vector<XMLLabel>();
-    long maxStmtCount = 0;
 
     /*
      * // for invokes, add a list of potential targets if (!Scene.v().hasActiveInvokeGraph()) {
@@ -152,13 +228,14 @@ public class XMLPrinter {
      * the --analyze-context flag is not specified // logger.debug(""+ "JIL VTA FAILED: " + re ); igVTA = null; }
      */
 
+    final String cleanMethodName = cleanMethod(body.getMethod().getName());
+
     // add method node
-    XMLNode methodNode
-        = xmlNode.addChild("method", new String[] { "name", "returntype", "class" }, new String[] { cleanMethodName,
-            body.getMethod().getReturnType().toString(), body.getMethod().getDeclaringClass().getName().toString() });
-    String declarationStr = body.getMethod().getDeclaration().toString().trim();
+    XMLNode methodNode = methodsNode.addChild("method", new String[] { "name", "returntype", "class" }, new String[] {
+        cleanMethodName, body.getMethod().getReturnType().toString(), body.getMethod().getDeclaringClass().getName() });
+    String declarationStr = body.getMethod().getDeclaration().trim();
     methodNode.addChild("declaration", toCDATA(declarationStr), new String[] { "length" },
-        new String[] { declarationStr.length() + "" });
+        new String[] { String.valueOf(declarationStr.length()) });
 
     // create references to parameters, locals, labels, stmts nodes
     XMLNode parametersNode = methodNode.addChild("parameters", new String[] { "method" }, new String[] { cleanMethodName });
@@ -169,15 +246,27 @@ public class XMLPrinter {
     // create default label
     XMLLabel xmlLabel = new XMLLabel(labelCount, cleanMethodName, currentLabel);
     labelsNode.addChild("label", new String[] { "id", "name", "method" },
-        new String[] { (labelCount++) + "", currentLabel, cleanMethodName });
+        new String[] { String.valueOf(labelCount++), currentLabel, cleanMethodName });
+
+    // include any analysis which will be used in the xml output
+    final LiveLocals sll = new SimpleLiveLocals(ExceptionalUnitGraphFactory.createExceptionalUnitGraph(body));
+
+    // lists
+    ArrayList<String> useList = new ArrayList<String>();
+    ArrayList<ArrayList<Long>> useDataList = new ArrayList<ArrayList<Long>>();
+    ArrayList<String> defList = new ArrayList<String>();
+    ArrayList<ArrayList<Long>> defDataList = new ArrayList<ArrayList<Long>>();
+    ArrayList<ArrayList<String>> paramData = new ArrayList<ArrayList<String>>();
+    ArrayList<XMLLabel> xmlLabelsList = new ArrayList<XMLLabel>();
+    long statementCount = 0;
+    long maxStmtCount = 0;
+    long labelID = 0;
 
     // for each statement...
-    while (unitIt.hasNext()) {
-      currentStmt = (Unit) unitIt.next();
-
+    for (Unit currentStmt : units) {
       // new label
       if (stmtToName.containsKey(currentStmt)) {
-        currentLabel = stmtToName.get(currentStmt).toString();
+        currentLabel = stmtToName.get(currentStmt);
 
         // fill in the stmt count for the previous label
         // index = xmlLabels.indexOf( "%s" );
@@ -190,84 +279,79 @@ public class XMLPrinter {
         // 100.0 ).intValue() + xmlLabels.substring( index + 2 );
 
         xmlLabel.stmtCount = labelID;
-        xmlLabel.stmtPercentage
-            = new Float((new Float(labelID).floatValue() / new Float(units.size()).intValue()) * 100.0).longValue();
+        xmlLabel.stmtPercentage = (long) (((float) labelID) / ((float) units.size()) * 100f);
         if (xmlLabel.stmtPercentage > maxStmtCount) {
           maxStmtCount = xmlLabel.stmtPercentage;
         }
 
-        xmlLabelsList.addElement(xmlLabel);
+        xmlLabelsList.add(xmlLabel);
         // xmlLabel.clear();
 
         xmlLabel = new XMLLabel(labelCount, cleanMethodName, currentLabel);
         labelsNode.addChild("label", new String[] { "id", "name", "method" },
-            new String[] { labelCount + "", currentLabel, cleanMethodName });
+            new String[] { String.valueOf(labelCount), currentLabel, cleanMethodName });
         labelCount++;
         labelID = 0;
       }
 
       // examine each statement
       XMLNode stmtNode = stmtsNode.addChild("statement", new String[] { "id", "label", "method", "labelid" },
-          new String[] { statementCount + "", currentLabel, cleanMethodName, labelID + "" });
+          new String[] { String.valueOf(statementCount), currentLabel, cleanMethodName, String.valueOf(labelID) });
       XMLNode sootstmtNode = stmtNode.addChild("soot_statement", new String[] { "branches", "fallsthrough" },
           new String[] { boolToString(currentStmt.branches()), boolToString(currentStmt.fallsThrough()) });
 
       // uses for each statement
       int j = 0;
-      Iterator<ValueBox> boxIt = currentStmt.getUseBoxes().iterator();
-      while (boxIt.hasNext()) {
-        ValueBox box = (ValueBox) boxIt.next();
+      for (ValueBox box : currentStmt.getUseBoxes()) {
         if (box.getValue() instanceof Local) {
-          String local = cleanLocal(((Local) box.getValue()).toString());
+          String local = cleanLocal(box.getValue().toString());
           sootstmtNode.addChild("uses", new String[] { "id", "local", "method" },
-              new String[] { j + "", local, cleanMethodName });
+              new String[] { String.valueOf(j), local, cleanMethodName });
           j++;
 
-          Vector<Long> tempVector = null;
+          ArrayList<Long> tempArrayList = null;
           int useIndex = useList.indexOf(local);
           if (useIndex == -1) {
-            useDataList.addElement(tempVector);
-            useList.addElement(local);
-            useIndex = useList.indexOf(local);
+            useDataList.add(tempArrayList);
+            useIndex = useList.size();
+            useList.add(local);
           }
 
           if (useDataList.size() > useIndex) {
-            tempVector = useDataList.elementAt(useIndex);
-            if (tempVector == null) {
-              tempVector = new Vector<Long>();
+            tempArrayList = useDataList.get(useIndex);
+            if (tempArrayList == null) {
+              tempArrayList = new ArrayList<Long>();
             }
-            tempVector.addElement(new Long(statementCount));
-            useDataList.setElementAt(tempVector, useIndex);
+            tempArrayList.add(statementCount);
+            useDataList.set(useIndex, tempArrayList);
           }
         }
       }
 
       // defines for each statement
       j = 0;
-      boxIt = currentStmt.getDefBoxes().iterator();
-      while (boxIt.hasNext()) {
-        ValueBox box = (ValueBox) boxIt.next();
+      for (ValueBox box : currentStmt.getDefBoxes()) {
         if (box.getValue() instanceof Local) {
-          String local = cleanLocal(((Local) box.getValue()).toString());
+          String local = cleanLocal(box.getValue().toString());
           sootstmtNode.addChild("defines", new String[] { "id", "local", "method" },
-              new String[] { j + "", local, cleanMethodName });
+              new String[] { String.valueOf(j), local, cleanMethodName });
           j++;
 
-          Vector<Long> tempVector = null;
+          ArrayList<Long> tempArrayList = null;
           int defIndex = defList.indexOf(local);
           if (defIndex == -1) {
-            defDataList.addElement(tempVector);
-            defList.addElement(local);
-            defIndex = defList.indexOf(local);
+            defDataList.add(tempArrayList);
+            defIndex = defList.size();
+            defList.add(local);
           }
 
           if (defDataList.size() > defIndex) {
-            tempVector = defDataList.elementAt(defIndex);
-            if (tempVector == null) {
-              tempVector = new Vector<Long>();
+            tempArrayList = defDataList.get(defIndex);
+            if (tempArrayList == null) {
+              tempArrayList = new ArrayList<Long>();
             }
-            tempVector.addElement(new Long(statementCount));
-            defDataList.setElementAt(tempVector, defIndex);
+            tempArrayList.add(statementCount);
+            defDataList.set(defIndex, tempArrayList);
           }
         }
       }
@@ -277,7 +361,7 @@ public class XMLPrinter {
        * CHA if (igCHA != null) { try { List targets = igCHA.getTargetsOf(stmtCurrentStmt); XMLNode CHAinvoketargetsNode =
        * sootstmtNode.addChild( "invoketargets", new String[] { "analysis", "count" }, new String[] { "CHA", targets.size() +
        * "" }); for (int i = 0; i < targets.size(); i++) { SootMethod meth = (SootMethod) targets.get(i);
-       * CHAinvoketargetsNode.addChild( "target", new String[] { "id", "class", "method" }, new String[] { i + "",
+       * CHAinvoketargetsNode.addChild( "target", new String[] { "id", "class", "method" }, new String[] { String.valueOf(i),
        * meth.getDeclaringClass().getFullName(), cleanMethod(meth.getName())}); } } catch (RuntimeException re) {
        * //logger.debug(""+ "XML: " + re + " (" + stmtCurrentStmt + ")" ); } }
        *
@@ -285,55 +369,62 @@ public class XMLPrinter {
        * InvokeExpr ie = (InvokeExpr) stmtCurrentStmt.getInvokeExpr(); if (!(ie instanceof StaticInvokeExpr) && !(ie
        * instanceof SpecialInvokeExpr)) { try { List targets = igVTA.getTargetsOf(stmtCurrentStmt); XMLNode
        * VTAinvoketargetsNode = sootstmtNode.addChild( "invoketargets", new String[] { "analysis", "count" }, new String[] {
-       * "VTA", targets.size() + "" }); for (int i = 0; i < targets.size(); i++) { SootMethod meth = (SootMethod)
+       * "VTA", String.valueOf(targets.size()) }); for (int i = 0; i < targets.size(); i++) { SootMethod meth = (SootMethod)
        * targets.get(i); VTAinvoketargetsNode.addChild( "target", new String[] { "id", "class", "method" }, new String[] { i
        * + "", meth.getDeclaringClass().getFullName(), cleanMethod(meth.getName())}); } } catch (RuntimeException re) {
        * //logger.debug(""+ "XML: " + re + " (" + stmtCurrentStmt + ")" ); } } } }
        */
 
       // simple live locals
-      List<Local> liveLocalsIn = sll.getLiveLocalsBefore(currentStmt);
-      List<Local> liveLocalsOut = sll.getLiveLocalsAfter(currentStmt);
-      XMLNode livevarsNode = sootstmtNode.addChild("livevariables", new String[] { "incount", "outcount" },
-          new String[] { liveLocalsIn.size() + "", liveLocalsOut.size() + "" });
-      for (int i = 0; i < liveLocalsIn.size(); i++) {
-        livevarsNode.addChild("in", new String[] { "id", "local", "method" },
-            new String[] { i + "", cleanLocal(liveLocalsIn.get(i).toString()), cleanMethodName });
-      }
-      for (int i = 0; i < liveLocalsOut.size(); i++) {
-        livevarsNode.addChild("out", new String[] { "id", "local", "method" },
-            new String[] { i + "", cleanLocal(liveLocalsOut.get(i).toString()), cleanMethodName });
+      {
+        List<Local> liveLocalsIn = sll.getLiveLocalsBefore(currentStmt);
+        List<Local> liveLocalsOut = sll.getLiveLocalsAfter(currentStmt);
+        XMLNode livevarsNode = sootstmtNode.addChild("livevariables", new String[] { "incount", "outcount" },
+            new String[] { String.valueOf(liveLocalsIn.size()), String.valueOf(liveLocalsOut.size()) });
+        for (ListIterator<Local> it = liveLocalsIn.listIterator(); it.hasNext();) {
+          int i = it.nextIndex();// index must be retrieved before 'next()'
+          Local val = it.next();
+          livevarsNode.addChild("in", new String[] { "id", "local", "method" },
+              new String[] { String.valueOf(i), cleanLocal(val.toString()), cleanMethodName });
+        }
+        for (ListIterator<Local> it = liveLocalsOut.listIterator(); it.hasNext();) {
+          int i = it.nextIndex();// index must be retrieved before 'next()'
+          Local val = it.next();
+          livevarsNode.addChild("out", new String[] { "id", "local", "method" },
+              new String[] { String.valueOf(i), cleanLocal(val.toString()), cleanMethodName });
+        }
       }
 
       // parameters
-      for (int i = 0; i < body.getMethod().getParameterTypes().size(); i++) {
-        Vector<String> tempVec = new Vector<String>();
-        paramData.addElement(tempVec);
+      for (int i = 0, e = body.getMethod().getParameterCount(); i < e; i++) {
+        paramData.add(new ArrayList<String>());
       }
 
       // parse any info from the statement code
       currentStmt.toString(up);
       String jimpleStr = up.toString().trim();
-      if (currentStmt instanceof soot.jimple.IdentityStmt && jimpleStr.indexOf("@parameter") != -1) {
+      if (currentStmt instanceof soot.jimple.IdentityStmt && jimpleStr.contains("@parameter")) {
         // this line is a use of a parameter
         String tempStr = jimpleStr.substring(jimpleStr.indexOf("@parameter") + 10);
-        if (tempStr.indexOf(":") != -1) {
-          tempStr = tempStr.substring(0, tempStr.indexOf(":")).trim();
+        int idx = tempStr.indexOf(':');
+        if (idx != -1) {
+          tempStr = tempStr.substring(0, idx).trim();
         }
-        if (tempStr.indexOf(" ") != -1) {
-          tempStr = tempStr.substring(0, tempStr.indexOf(" ")).trim();
+        idx = tempStr.indexOf(' ');
+        if (idx != -1) {
+          tempStr = tempStr.substring(0, idx).trim();
         }
-        int paramIndex = new Integer(tempStr).intValue();
-        Vector<String> tempVec = paramData.elementAt(paramIndex);
+        int paramIndex = Integer.valueOf(tempStr);
+        ArrayList<String> tempVec = paramData.get(paramIndex);
         if (tempVec != null) {
-          tempVec.addElement(Long.toString(statementCount));
+          tempVec.add(Long.toString(statementCount));
         }
-        paramData.setElementAt(tempVec, paramIndex);
+        paramData.set(paramIndex, tempVec);
       }
 
       // add plain jimple representation of each statement
       sootstmtNode.addChild("jimple", toCDATA(jimpleStr), new String[] { "length" },
-          new String[] { (jimpleStr.length() + 1) + "" });
+          new String[] { String.valueOf(jimpleStr.length() + 1) });
 
       // increment statement counters
       labelID++;
@@ -341,24 +432,29 @@ public class XMLPrinter {
     }
 
     // add count to statments
-    stmtsNode.addAttribute("count", statementCount + "");
+    stmtsNode.addAttribute("count", String.valueOf(statementCount));
 
     // method parameters
-    parametersNode.addAttribute("count", body.getMethod().getParameterCount() + "");
-    for (int i = 0; i < body.getMethod().getParameterTypes().size(); i++) {
-      XMLNode paramNode
-          = parametersNode.addChild("parameter", new String[] { "id", "type", "method", "name" }, new String[] { i + "",
-              body.getMethod().getParameterTypes().get(i).toString(), cleanMethodName, "_parameter" + i });
-      XMLNode sootparamNode = paramNode.addChild("soot_parameter");
+    {
+      List<Type> parameterTypes = body.getMethod().getParameterTypes();
+      parametersNode.addAttribute("count", String.valueOf(parameterTypes.size()));
+      for (ListIterator<Type> it = parameterTypes.listIterator(); it.hasNext();) {
+        int i = it.nextIndex();// index must be retrieved before 'next()'
+        Type val = it.next();
+        XMLNode paramNode = parametersNode.addChild("parameter", new String[] { "id", "type", "method", "name" },
+            new String[] { String.valueOf(i), String.valueOf(val), cleanMethodName, "_parameter" + i });
+        XMLNode sootparamNode = paramNode.addChild("soot_parameter");
 
-      Vector<String> tempVec = paramData.elementAt(i);
-      for (int k = 0; k < tempVec.size(); k++) {
-        sootparamNode.addChild("use", new String[] { "id", "line", "method" },
-            new String[] { k + "", String.valueOf(tempVec.elementAt(k)) + "", cleanMethodName });
+        ArrayList<String> tempVec = paramData.get(i);
+        for (ListIterator<String> itk = tempVec.listIterator(); itk.hasNext();) {
+          int k = itk.nextIndex();// index must be retrieved before 'next()'
+          String valk = itk.next();
+          sootparamNode.addChild("use", new String[] { "id", "line", "method" },
+              new String[] { String.valueOf(k), valk, cleanMethodName });
+        }
+        sootparamNode.addAttribute("uses", String.valueOf(tempVec.size()));
       }
-      sootparamNode.addAttribute("uses", tempVec.size() + "");
     }
-
     /*
      * index = xmlLabels.indexOf( "%s" ); if( index != -1 ) xmlLabels = xmlLabels.substring( 0, index ) + ( labelID ) +
      * xmlLabels.substring( index + 2 ); index = xmlLabels.indexOf( "%d" ); if( index != -1 ) xmlLabels =
@@ -367,323 +463,170 @@ public class XMLPrinter {
      */
 
     xmlLabel.stmtCount = labelID;
-    xmlLabel.stmtPercentage
-        = new Float((new Float(labelID).floatValue() / new Float(units.size()).floatValue()) * 100.0).longValue();
+    xmlLabel.stmtPercentage = (long) (((float) labelID) / ((float) units.size()) * 100f);
     if (xmlLabel.stmtPercentage > maxStmtCount) {
       maxStmtCount = xmlLabel.stmtPercentage;
     }
-    xmlLabelsList.addElement(xmlLabel);
+    xmlLabelsList.add(xmlLabel);
 
     // print out locals
-    Collection<Local> locals = body.getLocals();
-    Iterator<Local> localsIterator = locals.iterator();
-    Vector<String> localTypes = new Vector<String>();
-    Vector<Vector<XMLNode>> typedLocals = new Vector<Vector<XMLNode>>();
-    Vector<Integer> typeCounts = new Vector<Integer>();
-    int j = 0;
-    int currentType = 0;
+    {
+      Collection<Local> locals = body.getLocals();
+      ArrayList<String> localTypes = new ArrayList<String>();
+      ArrayList<ArrayList<XMLNode>> typedLocals = new ArrayList<ArrayList<XMLNode>>();
+      ArrayList<Integer> typeCounts = new ArrayList<Integer>();
+      int j = 0;
+      int currentType = 0;
+      for (Local localData : locals) {
+        int useCount = 0;
+        int defineCount = 0;
 
-    while (localsIterator.hasNext()) {
-      int useCount = 0;
-      int defineCount = 0;
-      Local localData = (Local) localsIterator.next();
-      String local = cleanLocal((String) localData.toString());
-      String localType = localData.getType().toString();
-
-      // collect the local types
-      if (!localTypes.contains(localType)) {
-        localTypes.addElement(localType);
-        typedLocals.addElement(new Vector<XMLNode>());
-        typeCounts.addElement(new Integer(0));
-      }
-
-      // create a reference to the local node
-      XMLNode localNode = new XMLNode("local", "", new String[] { "id", "method", "name", "type" },
-          new String[] { j + "", cleanMethodName, local, localType });
-      XMLNode sootlocalNode = localNode.addChild("soot_local");
-      currentType = 0;
-
-      for (int k = 0; k < localTypes.size(); k++) {
-        if (localType.equalsIgnoreCase(localTypes.elementAt(k))) {
-          currentType = k;
-          Integer tempInt = new Integer(typeCounts.elementAt(k).intValue() + 1);
-          typeCounts.setElementAt(tempInt, k);
-          break;
+        // collect the local types
+        final String localType = localData.getType().toString();
+        if (!localTypes.contains(localType)) {
+          localTypes.add(localType);
+          typedLocals.add(new ArrayList<XMLNode>());
+          typeCounts.add(0);
         }
-      }
 
-      // add all uses to this local
-      for (int k = 0; k < useList.size(); k++) {
-        String query = useList.elementAt(k);
-        if (query.equalsIgnoreCase(local)) {
-          Vector<Long> tempVector = useDataList.elementAt(useList.indexOf(local));
-
-          for (int i = 0; i < tempVector.size(); i++) {
-            sootlocalNode.addChild("use", new String[] { "id", "line", "method" },
-                new String[] { i + "", ((Long) tempVector.elementAt(i)).toString(), cleanMethodName });
+        final String local = cleanLocal(localData.toString());
+        // create a reference to the local node
+        XMLNode localNode = new XMLNode("local", "", new String[] { "id", "method", "name", "type" },
+            new String[] { String.valueOf(j), cleanMethodName, local, localType });
+        XMLNode sootlocalNode = localNode.addChild("soot_local");
+        currentType = 0;
+        for (ListIterator<String> it = localTypes.listIterator(); it.hasNext();) {
+          String val = it.next();
+          if (localType.equalsIgnoreCase(val)) {
+            int k = it.previousIndex();
+            currentType = k;
+            typeCounts.set(k, typeCounts.get(k) + 1);
+            break;
           }
-          useCount = tempVector.size();
-          break;
         }
-      }
 
-      // add all definitions to this local
-      for (int k = 0; k < defList.size(); k++) {
-        String query = (defList.elementAt(k));
-        if (query.equalsIgnoreCase(local)) {
-          Vector<Long> tempVector = defDataList.elementAt(defList.indexOf(local));
-
-          for (int i = 0; i < tempVector.size(); i++) {
-            sootlocalNode.addChild("definition", new String[] { "id", "line", "method" },
-                new String[] { i + "", ((Long) tempVector.elementAt(i)).toString(), cleanMethodName });
+        // add all uses to this local
+        for (String nextUse : useList) {
+          if (local.equalsIgnoreCase(nextUse)) {
+            ArrayList<Long> tempArrayList = useDataList.get(useList.indexOf(local));
+            useCount = tempArrayList.size();
+            for (ListIterator<Long> it = tempArrayList.listIterator(); it.hasNext();) {
+              int i = it.nextIndex();// index must be retrieved before 'next()'
+              Long val = it.next();
+              sootlocalNode.addChild("use", new String[] { "id", "line", "method" },
+                  new String[] { String.valueOf(i), String.valueOf(val), cleanMethodName });
+            }
+            break;
           }
-          defineCount = tempVector.size();
-          break;
         }
+
+        // add all definitions to this local
+        for (String nextDef : defList) {
+          if (local.equalsIgnoreCase(nextDef)) {
+            ArrayList<Long> tempArrayList = defDataList.get(defList.indexOf(local));
+            defineCount = tempArrayList.size();
+            for (ListIterator<Long> it = tempArrayList.listIterator(); it.hasNext();) {
+              int i = it.nextIndex();// index must be retrieved before 'next()'
+              Long val = it.next();
+              sootlocalNode.addChild("definition", new String[] { "id", "line", "method" },
+                  new String[] { String.valueOf(i), String.valueOf(val), cleanMethodName });
+            }
+            break;
+          }
+        }
+
+        // add number of uses and defines to this local
+        sootlocalNode.addAttribute("uses", String.valueOf(useCount));
+        sootlocalNode.addAttribute("defines", String.valueOf(defineCount));
+
+        // create a list of locals sorted by type
+        ArrayList<XMLNode> list = typedLocals.get(currentType);
+        list.add(localNode);
+        typedLocals.set(currentType, list);
+
+        // add local to locals node
+        localsNode.addChild((XMLNode) localNode.clone());
+        j++;
       }
 
-      // add number of uses and defines to this local
-      sootlocalNode.addAttribute("uses", useCount + "");
-      sootlocalNode.addAttribute("defines", defineCount + "");
+      // add count to the locals node
+      localsNode.addAttribute("count", String.valueOf(locals.size()));
 
-      // create a list of locals sorted by type
-      Vector<XMLNode> list = typedLocals.elementAt(currentType);
-      list.addElement(localNode);
-      typedLocals.setElementAt(list, currentType);
+      // add types node to locals node, and each type with each local per type
+      XMLNode typesNode =
+          localsNode.addChild("types", new String[] { "count" }, new String[] { String.valueOf(localTypes.size()) });
 
-      // add local to locals node
-      localsNode.addChild((XMLNode) localNode.clone());
-      j++;
-
-    }
-
-    // add count to the locals node
-    localsNode.addAttribute("count", locals.size() + "");
-
-    // add types node to locals node, and each type with each local per type
-    XMLNode typesNode = localsNode.addChild("types", new String[] { "count" }, new String[] { localTypes.size() + "" });
-
-    for (int i = 0; i < localTypes.size(); i++) {
-      String type = localTypes.elementAt(i);
-      XMLNode typeNode = typesNode.addChild("type", new String[] { "id", "type", "count" },
-          new String[] { i + "", type, typeCounts.elementAt(i) + "" });
-
-      Vector<XMLNode> list = typedLocals.elementAt(i);
-      for (j = 0; j < list.size(); j++) {
-        typeNode.addChild(list.elementAt(j));
+      for (ListIterator<String> it = localTypes.listIterator(); it.hasNext();) {
+        int i = it.nextIndex();// index must be retrieved before 'next()'
+        String val = it.next();
+        XMLNode typeNode = typesNode.addChild("type", new String[] { "id", "type", "count" },
+            new String[] { String.valueOf(i), val, String.valueOf(typeCounts.get(i)) });
+        for (XMLNode n : typedLocals.get(i)) {
+          typeNode.addChild(n);
+        }
       }
     }
 
     // add count attribute to labels node, and stmtcount, and stmtpercentage attributes to each label node
-    labelsNode.addAttribute("count", labelCount + "");
+    labelsNode.addAttribute("count", String.valueOf(labelCount));
     XMLNode current = labelsNode.child;
-    for (int i = 0; i < xmlLabelsList.size(); i++) {
-      XMLLabel tempLabel = xmlLabelsList.elementAt(i);
-      tempLabel.stmtPercentage
-          = new Float((new Float(tempLabel.stmtPercentage).floatValue() / new Float(maxStmtCount).floatValue()) * 100.0)
-              .longValue();
+    for (XMLLabel tempLabel : xmlLabelsList) {
+      tempLabel.stmtPercentage = (long) (((float) tempLabel.stmtPercentage) / ((float) maxStmtCount) * 100f);
 
       if (current != null) {
-        current.addAttribute("stmtcount", tempLabel.stmtCount + "");
-        current.addAttribute("stmtpercentage", tempLabel.stmtPercentage + "");
+        current.addAttribute("stmtcount", String.valueOf(tempLabel.stmtCount));
+        current.addAttribute("stmtpercentage", String.valueOf(tempLabel.stmtPercentage));
         current = current.next;
       }
     }
 
     // Print out exceptions
-    statementCount = 0;
-    XMLNode exceptionsNode = methodNode.addChild("exceptions");
-    Iterator<Trap> trapIt = body.getTraps().iterator();
-    if (trapIt.hasNext()) {
-      while (trapIt.hasNext()) {
-        Trap trap = trapIt.next();
-
+    {
+      int j = 0;
+      XMLNode exceptionsNode = methodNode.addChild("exceptions");
+      for (Trap trap : body.getTraps()) {
         // catch java.io.IOException from label0 to label1 with label2;
-        XMLNode catchNode = exceptionsNode.addChild("exception", new String[] { "id", "method", "type" }, new String[] {
-            (statementCount++) + "", cleanMethodName, Scene.v().quotedNameOf(trap.getException().getName()) });
-        catchNode.addChild("begin", new String[] { "label" },
-            new String[] { stmtToName.get(trap.getBeginUnit()).toString() });
-        catchNode.addChild("end", new String[] { "label" }, new String[] { stmtToName.get(trap.getEndUnit()).toString() });
-        catchNode.addChild("handler", new String[] { "label" },
-            new String[] { stmtToName.get(trap.getHandlerUnit()).toString() });
+        XMLNode catchNode = exceptionsNode.addChild("exception", new String[] { "id", "method", "type" },
+            new String[] { String.valueOf(j++), cleanMethodName, Scene.v().quotedNameOf(trap.getException().getName()) });
+        catchNode.addChild("begin", new String[] { "label" }, new String[] { stmtToName.get(trap.getBeginUnit()) });
+        catchNode.addChild("end", new String[] { "label" }, new String[] { stmtToName.get(trap.getEndUnit()) });
+        catchNode.addChild("handler", new String[] { "label" }, new String[] { stmtToName.get(trap.getHandlerUnit()) });
       }
+      exceptionsNode.addAttribute("count", String.valueOf(exceptionsNode.getNumberOfChildren()));
     }
-
-    exceptionsNode.addAttribute("count", exceptionsNode.getNumberOfChildren() + "");
-
     // Scene.v().releaseActiveInvokeGraph();
-
-    return;
   }
 
-  private String cleanMethod(String str) {
+  private static String cleanMethod(String str) {
     // method names can be filtered here, for example replacing < and > with _ to comply with XML name tokens
     return str.trim().replace('<', '_').replace('>', '_');
   }
 
-  private String cleanLocal(String str) {
+  private static String cleanLocal(String str) {
     // local names can be filtered here, for example replacing $ with _ to comply with XML name tokens
     return str.trim(); // .replace( '$', '_' );
   }
 
-  private String toCDATA(String str) {
+  private static String toCDATA(String str) {
     // wrap a string in CDATA markup - str can contain anything and will pass XML validation
-    str = str.replaceAll("]]>", "]]&gt;");
-    return "<![CDATA[" + str + "]]>";
+    return "<![CDATA[" + str.replaceAll("]]>", "]]&gt;") + "]]>";
   }
 
-  private String boolToString(boolean bool) {
-    if (bool) {
-      return "true";
-    }
-    return "false";
+  private static String boolToString(boolean bool) {
+    return bool ? "true" : "false";
   }
 
-  class XMLLabel {
-    public long id;
-    public String methodName;
-    public String label;
+  private static class XMLLabel {
+    public final long id;
+    public final String methodName;
+    public final String label;
     public long stmtCount;
     public long stmtPercentage;
 
     public XMLLabel(long in_id, String in_methodName, String in_label) {
-      id = in_id;
-      methodName = in_methodName;
-      label = in_label;
+      this.id = in_id;
+      this.methodName = in_methodName;
+      this.label = in_label;
     }
-  }
-
-  private void printXMLTo(SootClass cl, PrintWriter out) {
-    root = new XMLRoot();
-    XMLNode xmlRootNode = null;
-    XMLNode xmlHistoryNode = null;
-    XMLNode xmlClassNode = null;
-    XMLNode xmlTempNode = null;
-
-    // Print XML class output
-    {
-      // add header nodes
-      xmlRootNode = root.addElement("jil");
-
-      // add history node
-      // TODO: grab the software version and command line
-      String cmdlineStr = "";
-      for (String element : Main.v().cmdLineArgs) {
-        cmdlineStr += element + " ";
-      }
-      String dateStr = new Date().toString();
-      xmlHistoryNode = xmlRootNode.addChild("history");
-      xmlHistoryNode.addAttribute("created", dateStr);
-      xmlHistoryNode.addChild("soot", new String[] { "version", "command", "timestamp" },
-          new String[] { Main.v().versionString, cmdlineStr.trim(), dateStr });
-
-      // add class root node
-      xmlClassNode = xmlRootNode.addChild("class", new String[] { "name" },
-          new String[] { Scene.v().quotedNameOf(cl.getName()).toString() });
-      if (cl.getPackageName().length() > 0) {
-        xmlClassNode.addAttribute("package", cl.getPackageName());
-      }
-      if (cl.hasSuperclass()) {
-        xmlClassNode.addAttribute("extends", Scene.v().quotedNameOf(cl.getSuperclass().getName()).toString());
-      }
-
-      // add modifiers subnode
-      xmlTempNode = xmlClassNode.addChild("modifiers");
-      StringTokenizer st = new StringTokenizer(Modifier.toString(cl.getModifiers()));
-      while (st.hasMoreTokens()) {
-        xmlTempNode.addChild("modifier", new String[] { "name" }, new String[] { st.nextToken() + "" });
-      }
-      xmlTempNode.addAttribute("count", xmlTempNode.getNumberOfChildren() + "");
-    }
-
-    // Print interfaces
-    {
-      xmlTempNode
-          = xmlClassNode.addChild("interfaces", "", new String[] { "count" }, new String[] { cl.getInterfaceCount() + "" });
-
-      Iterator<SootClass> interfaceIt = cl.getInterfaces().iterator();
-      if (interfaceIt.hasNext()) {
-        while (interfaceIt.hasNext()) {
-          xmlTempNode.addChild("implements", "", new String[] { "class" },
-              new String[] { Scene.v().quotedNameOf(interfaceIt.next().getName()).toString() });
-        }
-      }
-    }
-
-    // Print fields
-    {
-      xmlTempNode = xmlClassNode.addChild("fields", "", new String[] { "count" }, new String[] { cl.getFieldCount() + "" });
-
-      Iterator<SootField> fieldIt = cl.getFields().iterator();
-      if (fieldIt.hasNext()) {
-        int i = 0;
-        while (fieldIt.hasNext()) {
-          SootField f = fieldIt.next();
-
-          if (f.isPhantom()) {
-            continue;
-          }
-
-          String type = f.getType().toString();
-          String name = f.getName().toString();
-
-          // add the field node
-          XMLNode xmlFieldNode = xmlTempNode.addChild("field", "", new String[] { "id", "name", "type" },
-              new String[] { (i++) + "", name, type });
-          XMLNode xmlModifiersNode = xmlFieldNode.addChild("modifiers");
-
-          StringTokenizer st = new StringTokenizer(Modifier.toString(f.getModifiers()));
-          while (st.hasMoreTokens()) {
-            xmlModifiersNode.addChild("modifier", new String[] { "name" }, new String[] { st.nextToken() + "" });
-          }
-
-          xmlModifiersNode.addAttribute("count", xmlModifiersNode.getNumberOfChildren() + "");
-        }
-      }
-    }
-
-    // Print methods
-    {
-      Iterator<SootMethod> methodIt = cl.methodIterator();
-
-      setXMLNode(xmlClassNode.addChild("methods", new String[] { "count" }, new String[] { cl.getMethodCount() + "" }));
-
-      while (methodIt.hasNext()) {
-        SootMethod method = methodIt.next();
-
-        if (method.isPhantom()) {
-          continue;
-        }
-
-        if (!Modifier.isAbstract(method.getModifiers()) && !Modifier.isNative(method.getModifiers())) {
-          if (!method.hasActiveBody()) {
-            throw new RuntimeException("method " + method.getName() + " has no active body!");
-          } else {
-            printTo(method.getActiveBody(), out);
-          }
-        }
-      }
-    }
-    out.println(toString());
-  }
-
-  public void printJimpleStyleTo(SootClass cl, PrintWriter out) {
-    // write cl class as XML
-    printXMLTo(cl, out);
-    return;
-  }
-
-  /**
-   * Prints out the method corresponding to b Body, (declaration and body), in the textual format corresponding to the IR
-   * used to encode b body.
-   *
-   * @param out
-   *          a PrintWriter instance to print to.
-   */
-  private void printTo(Body b, PrintWriter out) {
-    b.validate();
-
-    printStatementsInBody(b, out);
-
   }
 }
